tests/negative/parser/fmt/unexpected_end_close.orng
// unexpected_end_close.orng:6:26: error: unexpected end of format string
//     try @print("Hello, }")
//                         ^
// 
fn main() -> ()!() with core::IO {
    try @print("Hello, }")
    .ok
}